# Computational-Photography

./: .gitignore  installation_guide.md  pyproject.toml  verify_installation.ipynb
PythonCrashCourse/: PythonCrashCourse.ipynb  fibo.py
exercise_01/: 1.1_Color_Reconstruction_Exercise.ipynb
exercise_01/.ipynb_checkpoints/: 1.2_Rolling_Shutter_Exercises-checkpoint.ipynb
exercise_01/images/: PythonCrashCourse.ipynb
exercise_02/: 2.1_White_Balancing_Exercises.ipynb  2.2_Demosaicing_Exercise.ipynb
exercise_02/.ipynb_checkpoints/: 2.2_Demosaicing_Exercise-checkpoint.ipynb
exercise_02/images/: checker.tiff  my_white_balanced_checker.tiff
exercise_02/images/.ipynb_checkpoints/: my_white_balanced_checker-checkpoint.tiff
exercise_03/: Depth_of_field.ipynb  Depth_of_field_nico.ipynb
exercise_03/.ipynb_checkpoints/: Depth_of_field-checkpoint.ipynb
exercise_03/images/: sponza_depth.flt  sponza_normal.flt
exercise_04/: HDR_Reconstruction.ipynb  flt_reader.py
exercise_04_nico/: HDR_Reconstruction_nico.ipynb
exercise_04_nico/input_images/: max01.ppm
exercise_05/: Denoising unchanged.ipynb  Denoising.ipynb  noise.py
exercise_05/images/: noisy_tablet.tiff  tablet.tiff  tablet_small.tiff
exercise_05/images/dark/: 1.tiff  10.tiff  11.tiff  12.tiff  13.tiff  14.tiff  15.tiff  16.tiff  2.tiff  3.tiff  4.tiff  5.tiff  6.tiff  7.tiff  (+2 more)
exercise_06/: DataFitting1.ipynb  camCurve.mat
exercise_09/: DNN_Restoration.ipynb  bsds500_dataset.py  noise.py
exercise_10/: 10.1_Relighting (Nico).ipynb  10.1_Relighting.ipynb  10.2_Reparametrizing.ipynb  Helper_functions.py
(+16 files in other folders)
